--- a/index.html
+++ b/index.html
@@ -1,278 +1,32 @@
---- layout: landing ---
-<!-- Banner -->
-<section id="banner">
-	<div class="inner">
-		<h2 style="font-size:2.4em;">{{ site.title }}</h2>
-		<p style="font-family:'dosis' !important; font-size:2em !important;">Portfolio</p>
-		<ul class="actions">
-			<!-- <li><a href="#" class="button special">Activate</a></li> -->
-		</ul>
-	</div>
-	<a href="#one" class="more scrolly">Learn More</a>
-</section>
+---
+layout: landing
+---
+				<!-- Banner -->
+					<section id="banner">
+						<div class="inner">
+							<h2 style="font-size:2.4em;">{{ site.title }}</h2>
+							<p style="font-family:'dosis' !important; font-size:2em !important;">Portfolio</p>
+							<ul class="actions">
+								<!-- <li><a href="#" class="button special">Activate</a></li> -->
+							</ul>
+						</div>
+						<a href="#one" class="more scrolly">Learn More</a>
+					</section>
 
-<!-- One -->
-<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
-	<div class="inner">
-		<header class="major">
-			<h2 style="color:#333;">Arcu aliquet vel lobortis ata nisl<br />
+				<!-- One -->
+					<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
+						<div class="inner">
+							<header class="major">
+								<h2 style="color:#333;">Arcu aliquet vel lobortis ata nisl<br />
 								eget augue amet aliquet nisl cep donec</h2>
-			<p style="color:#333;">Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br /> fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-		</header>
-		<!-- <ul class="icons major">
+								<p style="color:#333;">Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+							</header>
+							<!-- <ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
 							</ul> -->
-<<<<<<< HEAD
-	</div>
-</section>
-
-
-<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
-	<div class="inner">
-		<header class="major">
-			<h1 style="color:#333;">3D Models</h1>
-		</header>
-	</div>
-</section>
-
-<!-- Two -->
-<section id="two" class="wrapper alt style2" style="background-color:rgba(0, 0, 0, 0.5);">
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/51cffe77580a4e4aa4fb860fdf2efd5b/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
-				    webkitallowfullscreen="true" onmousewheel=""></iframe>
-			</div>
-		</div>
-		<div class="content">
-			<h2>Vietnam War Helmet</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
-
-
-
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="700" height="600" src="https://sketchfab.com/models/d6e3f6d2eb0a408383051760c600bc33/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
-				    webkitallowfullscreen="true" onmousewheel=""></iframe></div>
-		</div>
-
-		<div class="content">
-			<h2>Handcuffs</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
-
-
-
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/d2041cbd4db74eacb269bcea305ba40d/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
-				    webkitallowfullscreen="true" onmousewheel=""></iframe>
-			</div>
-		</div>
-
-		<div class="content">
-			<h2>Desk Lamp</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
-
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="700" height="600" src="https://sketchfab.com/models/7cc067ce425c454fb06383f980017232/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
-				    webkitallowfullscreen="true" onmousewheel=""></iframe>
-			</div>
-		</div>
-		<div class="content">
-			<h2>Computer Monitors</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
-
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/a42f980f9ef943638acdd02620d5c656/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
-						webkitallowfullscreen="true" onmousewheel=""></iframe>
-			</div>
-		</div>
-		<div class="content">
-			<h2>Saw	</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
-
-	<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
-		<div class="inner">
-			<header class="major">
-				<h1 style="color:#333;">CAD Models</h1>
-			</header>
-		</div>
-	</section>
-
-
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/bikeblack.png" alt=""></div>
-		</div>
-
-		<div class="content">
-			<h2>Bicycle</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
-
-
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/guitar.png" alt=""></div>
-		</div>
-
-		<div class="content">
-			<h2>Guitar</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
-
-	<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
-		<div class="inner">
-			<header class="major">
-				<h1 style="color:#333;">Graphic Design</h1>
-			</header>
-		</div>
-	</section>
-
-
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/Eddie-Graduation2016.jpg" alt=""></div>
-		</div>
-		<div class="content">
-			<h2>2016 Graduation Poster</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
-
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/vice.jpg" alt=""></div>
-		</div>
-
-		<div class="content">
-			<h2>Vice Poster</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
-
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/neon.jpg" alt=""></div>
-		</div>
-
-		<div class="content">
-			<h2>Neon Poster</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
-
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/witcher.jpg" alt=""></div>
-		</div>
-
-		<div class="content">
-			<h2>Witcher Poster</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
-
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/beachbl2.jpg" alt=""></div>
-		</div>
-
-		<div class="content">
-			<h2>Black Waves Poster</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
-
-
-	<section id="one" class="wrapper style1 special">
-		<div class="inner">
-			<header class="major">
-				<h1 style="color:#333;">Web Design</h1>
-			</header>
-		</div>
-	</section>
-
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/pako.jpg" alt=""></div>
-		</div>
-
-		<div class="content">
-			<h2>Pako Commerce</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
-
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/tech2.jpg" alt=""></div>
-		</div>
-
-		<div class="content">
-			<h2>Techsmart</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
-
-
-</section>
-
-
-
-<!-- Three -->
-<section id="three" class="wrapper style3 special">
-	<div class="inner">
-		<header class="major">
-			<h2>Accumsan mus tortor nunc aliquet</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br /> fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-		</header>
-		<ul class="features">
-			<li class="icon fa-paper-plane-o">
-				<h3>Arcu accumsan</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-laptop">
-				<h3>Ac Augue Eget</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-code">
-				<h3>Mus Scelerisque</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-headphones">
-				<h3>Mauris Imperdiet</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-heart-o">
-				<h3>Aenean Primis</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-flag-o">
-				<h3>Tortor Ut</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-		</ul>
-	</div>
-</section>
-
-<!-- CTA
-=======
 						</div>
 					</section>
 
@@ -389,7 +143,7 @@
 							</div>
 						</section>
 
-						<section class="spotlight" style="background-color: rgba(0, 0, 0, 0.74);">
+						<section class="spotlight">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/neon.jpg" alt=""></div>
 </div>
@@ -400,7 +154,7 @@
 							</div>
 						</section>
 
-						<section class="spotlight" style="background-color: rgba(0, 0, 0, 0.78);">
+						<section class="spotlight">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/witcher.jpg" alt=""></div></div>
 
@@ -410,7 +164,7 @@
 							</div>
 						</section>
 
-						<section class="spotlight" style="background-color: rgba(0, 0, 0, 0.83);">
+						<section class="spotlight">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/beachbl2.jpg" alt=""></div>
 </div>
@@ -422,7 +176,7 @@
 						</section>
 
 
-						<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
+						<section id="one" class="wrapper style1 special">
 							<div class="inner">
 								<header class="major">
 									<h1 style="color:#333;">Web Design</h1>
@@ -430,7 +184,7 @@
 							</div>
 						</section>
 
-						<section class="spotlight" style="background-color: rgba(0, 0, 0, 0.87);">
+						<section class="spotlight">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/pako.jpg" alt=""></div>
 </div>
@@ -441,7 +195,7 @@
 							</div>
 						</section>
 
-						<section class="spotlight" style="background-color: rgba(0, 0, 0, 0.92);">
+						<section class="spotlight">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/tech2.jpg" alt=""></div></div>
 
@@ -494,7 +248,6 @@
 					</section>
 
 				<!-- CTA
->>>>>>> parent of 9583892... fixed fading amount
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
